# adventofcode-python

./: .env  .env.sample  .gitignore  README.md  pyproject.toml  tasks.py  tox.ini
aoc/: main.py
aoc/utils/: __init__.py  cli.py  data.py
tests/: conftest.py
tests/test_utils/: test_cli.py  test_config.py  test_data.py
