[tool.poetry]
name = "adventofcode-python"
description = "Code for the Advent of Code challenges, from 2023 onwards."
authors = ["Pedro Piquero <pedropiqueroplaza@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
fs = "^2.4.16"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
black = "^24.3.0"
invoke = "^2.2.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
immobilus = "^1.5.0"
ipdb = "^0.13.13"
coverage = "^7.4.4"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adventofcode = 'aoc:main'

[tool.pytest.ini_options]
console_output_style = "progress"
verbosity_assertions = 3
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:fs",
  "ignore::DeprecationWarning:fs.opener"
]

[tool.isort]
profile = "black"
ignore_whitespace = true
